ddetect (1.16) UNRELEASED; urgency=low

  * Colin Watson
    - If udev is available, call udevstart at the end of hardware detection
      to make sure that device nodes are created synchronously.
    - Don't break if no modules need to be loaded.

 -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 20:47:21 +0100

ddetect (1.15) unstable; urgency=low

  * Joey Hess
    - Force register and load sunhme, sunbmac, and esp on sparc since
      apparently discover does not find these on at least an E4500.
      This is kind of a work around for #299074, and will be reverted once
      discover is fixed.
    - Detect if only one ethernet interface is found, and if it's a firewire
      interface, warn the user and allow them to manually select modules to
      load. This after noticing that 2.6 installs that fail to load the
      ethernet driver fail unexpectedly when the firewire ethernet ends up
      being used. Closes: #303445
    - Add a few missing 2.6 ethernet drivers to devnames.txt.
  * Colin Watson
    - Register apm_emu on systems with via-pmu mac-io devices.
  * Frans Pop
    - Schedule acpi packages for installation if system has acpi support.
      Works only for 2.6 kernels. Closes: #300545
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (es.po) by Javier Fernandez-Sanguino Peña
    - French (fr.po) by Christian Perrier
    - Gallegan (gl.po) by Jacobo Tarrio
    - Hebrew (he.po) by Lior Kaplan
    - Italian (it.po) by Stefano Canepa
    - Korean (ko.po) by Changwoo Ryu
    - Dutch (nl.po) by Bart Cornelis
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Yuri Kozlov