@@ -4,6 +4,10 @@ ddetect (1.16) UNRELEASED; urgency=low
     - If udev is available, call udevstart at the end of hardware detection
       to make sure that device nodes are created synchronously.
     - Don't break if no modules need to be loaded.
+    - Add integration with hotplug:
+      + Re-run hotplug rc scripts during hardware detection.
+      + Hook into net events so that we can record them for netcfg.
+      Requires lspci in udeb form, which isn't yet available (#284110).
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 20:47:21 +0100
 
